update reading list

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </li>
             <li>
               <p>
-               Since I am a huge crime novel fan, I am also listening to <strong>The Escape</strong> by <em><a href="https://en.wikipedia.org/wiki/David_Baldacci#Bibliography" target="blank" class="link">David Baldacchi</a></em> as an audiobook. I have become quite a fan of this author and am almost going back to back on his novels. Sometimes I do ‘stray' back to my beloved classics, most prominently to books by <em><a href="https://en.wikipedia.org/wiki/Agatha_Christie" target="blank" class="link">Agatha Christie</a></em>.
+               Since I am a huge crime novel fan, I am also listening to <strong>The Simple Truth</strong> by <em><a href="https://en.wikipedia.org/wiki/David_Baldacci#Bibliography" target="blank" class="link">David Baldacchi</a></em> as an audiobook. I have become quite a fan of this author and am almost going back to back on his novels. Sometimes I do ‘stray' back to my beloved classics, most prominently to books by <em><a href="https://en.wikipedia.org/wiki/Agatha_Christie" target="blank" class="link">Agatha Christie</a></em>.
               </p>
             </li>
           </ul>
