--- a/index.html
+++ b/index.html
@@ -84,6 +84,24 @@
       </div>
 
       <div class="responsive-container">
+        <div>
+          <h2 class="title">Reminder App</h2>
+          <img src="images/r_reminder.png" id="flashcard-pic" class="mb-3 mx-auto d-block">
+        </div>
+        <div class="content">
+          <p class="mb-3">
+            This web application will help you to never forget anything ever again. You can create an account and create reminders with a specific date and time, and the reminder email will be sent to you on a monthly basis.
+          </p>
+          <div class="button-project">
+            <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank"  class="button">See Code</a>
+            <a href="casestudy_rreminder.html" class="button">Read case study</a>
+            <!-- <a href="work_in_progress.html" class="button">Go to Project</a> -->
+          </div>
+        </div>
+      </div>
+
+
+      <div class="responsive-container">
         <div class="content">
           <h3 class="title">
             Current Reading List
