--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Casestudy Flashcards</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
@@ -15,11 +16,11 @@
 
 <body>
   <div class="container">
-    <h2>Case study Flashcards</h2>
+    <h2 class="mt-4">Case study Flashcards</h2>
     <p><em>This project is still in working progress and will be updated with the newest advances soon...</em></p>
 
   <!-- <p>last updated: February 14th, 2020</p> -->
-  <h4>What I am learning right now</h4>
+  <h5 class="mt-4">What I am learning right now</h5>
   <ul>
     <li>
       <h6>Working with a CI Pipeline on GitLab</h6>
@@ -30,7 +31,7 @@
   </ul>
   <br>
 
-  <h4>What I learned</h4>
+  <h5>What I learned</h5>
   <!-- <ul style="list-style-type:none"> -->
   <ul>
     <li>
@@ -62,9 +63,9 @@
          Parameters: {“word"=>"nuevo", "translation"=>"new", "picture"=>"", "hint"=>"", "flipped"=>false, "deck_ids"=>[12, 11], "card"=>{"word"=>"nuevo", "translation"=>"new", "picture"=>"", "hint"=>"", "flipped"=>false}}
         </code>
       </pre>
-      It turns out that I had to change the axios syntax in the store very slightly from
+      <p>It turns out that I had to change the axios syntax in the store very slightly from</p>
       <code>return axios.post('/cards', card)</code>
-      to
+      <p class="mt-2">to</p>
       <code>return axios.post('/cards', {card: card})</code>.
       <pre>
         <code>
@@ -127,7 +128,7 @@
   </ul>
     <!-- <p>last updated: January 1st, 2020</p> -->
     <!-- <p>...first of all...</p> -->
-    <!-- <h4>Happy New Year!</h4> -->
+    <!-- <h5>Happy New Year!</h5> -->
    <!--  <p>
       Stephanie and I made great progress the last few weeks and getting closer to the final design of the application.
     </p> -->
@@ -137,10 +138,10 @@
     <p>...</p>
     <!-- <p>last updated: November 25th, 2019</p> -->
     <div>
-      <h3>Goal</h3>
+      <h5>Goal</h5>
       <ul>
         <li>
-          Build a fully functional web application app for vocabulary training, that enables the user to
+          Build a fully functional web application for vocabulary training, that enables the user to
           <ul>
             <li>Set up an account, signing in with facebook, google or email</li>
             <li>Create individual cards, fill in the word, translation and upload a picture from a folder or through a googlesearch</li>
@@ -156,7 +157,7 @@
       </ul>
     </div>
 
-    <h3>Approach</h3>
+    <h5>Approach</h5>
     <div>
       <ul>
         <li>
@@ -218,20 +219,20 @@
       </ul>
     </p>
 
-    <h3>Schema</h3>
+    <h5>Schema</h5>
     <div>
       <img src="images/schema.png" alt="schema of the app" id="schema">
     </div>
 
-    <h2>Responsibilities</h2>
+    <h5 class="mt-4 mb-2">Responsibilities</h5>
     <div>
-      <h4>
-        <strong>Stephanie</strong>
-      </h4>
+      <h5>
+        Stephanie
+      </h5>
       <p>UX and UI Design</p>
-      <h4>
-      <strong>Elisa</strong>
-      </h4>
+      <h5>
+      Elisa
+      </h5>
       <p>Frontend and backend</p>
     </div>
 
@@ -239,13 +240,13 @@
 
 
 
-    <!-- <h3>Approach</h3>
+    <!-- <h5>Approach</h5>
 
 
-    <h3>Motivation</h3>
+    <h5>Motivation</h5>
 
 
-    <h3>Features</h3>
+    <h5>Features</h5>
     <ul>
     <li></li>
     <li></li>
@@ -262,7 +263,7 @@
     </ul>
 
 
-    <h3>Thanks</h3>
+    <h5>Thanks</h5>
     <p><a href="" target="_blank"></a> design the front end for me, thank you for that!</p> -->
 
   </div>
@@ -272,7 +273,7 @@
     <ul class="casestudy-directory">
       <li><a href="casestudy_calculator.html" class="link">Previous case study</a></li>
       <li><a href="index.html" class="link">Home</a></li>
-      <li><a href="casestudy_elderme.html" class="link">Next case study</a></li>
+      <li><a href="casestudy_rreminder.html" class="link">Next case study</a></li>
     </ul>
   </div>
 
