--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="container">
       <div class="responsive-container">
         <img class="pic mx-auto d-block" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
+      <!--   <img class="pic mx-auto d-block" src="images/codersquirrel.svg" alt="Profile Picture of Elisa"> -->
+
         <div class="content">
           <h2 class="title mb-3">Hi, I am Elisa,  <br>
           a software developer and art conservator based in Berlin.</h2>
