--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Casestudy Calculator</title>
+  <title>Casestudy Line</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -15,53 +15,40 @@
 
 <body>
   <div class="container">
-    <h2 class="title">Case study Visa Calculator</h2>
+    <h2 class="title">Case study Line</h2>
     <div class="card-case-study">
       <h4>Approach</h4>
       <p>
-        This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.
-      </p>
-      <p>
-        The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.
+        This weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.
       </p>
 
       <h4>Motivation</h4>
       <p>
-        Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.
-      </p>
-      <p>
-        Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.
+        Open source projects often face challenges in securing adequate funding. Line, an open source project itself, wants to change that. I was curious about the web3 space and this project gives me the opportunity to 
+        explore, learn and expand my horizon.
       </p>
     </div>
 
     <div>
       <h4>Features</h4>
       <ul>
-        <li>Enter country's visa regulations (maximum days in certain time frame, for example: Schengen Zone - 90 out of 180 days).</li>
-        <li>Enter first date of entry.</li>
-        <li>The user will be informed when the time frame ends - until when can I plan my 90 days.</li>
-        <li>Multiple trips are calculateable.</li>
-        <li>Previously picked dates are blocked to avoid overlap.</li>
-        <li>Dates after the end of the time frame are blocked for correct results.</li>
-        <li>Trips can be deleted.</li>
-        <li>The amount of days are calculated, once the submit button is hit.</li>
-        <ul>
-          <li>It informs on how many days are still open to fill the maximum days or how many days need to be removed to be within regulations.</li>
-           <li>It informs the user when the time frame ends.</li>
-        </ul>
+        <li>Sign up via GitHub's Oauth flow</li>
+        <li>See all open repositories of which you are the owner</li>
+        <li>Add a wallet through the web3Modal of WalletConnect</li>
+        <li>Create or edit a campaign for each repo or your organization</li>
+        <li>Contribute to a project or organization (in progress)</li>
+        <li>Overview of all contributions to your projects (in progress)</li>
+        <li>Add bounties to projects and smart contracts (in future)</li>
       </ul>
     </div>
 
-    <div>
-      <h4>Thanks</h4>
-      <p>I had my wonderful colleague <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> design the front end for me, thank you for that!</p>
-    </div>
+   
 
    <div>
     <ul class="casestudy-directory">
-      <li><a href="casestudy_elderme.html" class="link">Previous case study</a></li>
+      <li><a href="casestudy_rreminder.html" class="link">Previous case study</a></li>
       <li><a href="index.html" class="link">Home</a></li>
-      <li><a href="casestudy_flashcards.html" class="link">Next case study</a></li>
+      <li><a href="casestudy_elderme.html" class="link">Next case study</a></li>
     </ul>
    </div>
 
