--- a/index.html
+++ b/index.html
@@ -15,17 +15,30 @@
         <img class="pic mx-auto d-block" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
         <div class="content">
           <h2 class="title mb-3">Hi, I am Elisa,  <br>
-          a software developer and art conservator based in Berlin.</h2>
+          a fullstack software developer based in Berlin.</h2>
           <p>
-            While running my own restoration workshop, I started to teach myself coding.
-            <!-- insert later
-            <a href=“https://www.lewagon.com/” target=“_blank” class="link"><img src=“images/LW-icon.png” alt=“leWagon” id=“le-wagon-picture”></a> -->
-            After the <a href="https://www.lewagon.com/" target="_blank" class="link">LeWagon-coding bootcamp</a>, I now work as a back end developer with focus on Ruby on Rails, excited by learning something new every day.
-            In my free time, you can find me taking extended walks in the forest with the family dog (or if I find the motivation, jogging), solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language on Duolingo - currently Italian.
+            In my free time, you can find me solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language on Duolingo - currently Italian.
           </p>
           <p>
-            Please feel free to look at my current and future projects.
+            Please feel free to look at my past and current projects.
           </p>
+        </div>
+      </div>
+
+      <div class="responsive-container">
+        <div>
+          <h2 class="title">Line</h2>
+        <img class="mb-3 mx-auto d-block image-size" id="line-pic" src="images/line.png" alt="Screenshot of the Line Platform">
+        </div>
+        <div class="content">
+           <p class="mb-3">
+            Line is a platform that aims to facilitate the financial contributionnto open source projects, using web3 technology.
+          </p>
+          <div class="button-project">
+             <a href="https://github.com/buildwithline/line" target="_blank" class="button">See Code</a>
+            <a href="casestudy_line.html" class="button">Read case study</a>
+             <a href="https://withline.xyz/" target="_blank" class="button">Read more</a>
+          </div>
         </div>
       </div>
 
