Update reading list

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </li>
             <li>
               <p>
-                I am almost finished with reading <strong><a href="https://en.wikipedia.org/wiki/The_Innovators_(book)" target="_blank" class="link">The Innovators</a></strong> by <em>Walter Issacson</em>, a most interesting journey through the invention of the Computer and all related topics.
+                Audiobooks are very useful in this busy world, so I am listeing to <em>Brené Brown's</em> The Gifts of Imperfection.
               </p>
             </li>
             <li>
@@ -142,7 +142,7 @@
   <footer>
   <div class="contact">
     <ul class="list-inline">
-      <li class="list-inline-item footer">&copy 2019, Elisa Burghard</li>
+      <li class="list-inline-item footer">&copy 2024, Elisa Burghard</li>
       <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
       <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
       <li class="list-inline-item footer icon-footer"><a href="https://gitlab.com/codersquirrel" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
@@ -158,7 +158,6 @@
                 </button>
               </div>
               <div class="modal-body">
-                <!-- The text field -->
                 <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
               </div>
             </div>
