Fixing css and texts

--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -16,10 +16,8 @@
 
 <body>
   <div class="container">
-    <h2 class="mt-4">Case study Flashcards</h2>
+    <h2 class="mt-4 title">Case study Flashcards</h2>
     <p><em>This project is still in working progress and will be updated with the newest advances soon...</em></p>
-
-  <!-- <p>last updated: February 14th, 2020</p> -->
   <h5 class="mt-4">What I am learning right now</h5>
   <ul>
     <li>
@@ -94,7 +92,7 @@
     <br>
     <li>
       <h6>Issue Tracker</h6>
-      Stephanie and I started using GitLab’s issues to track discussions and document our decision making process and results. We are only a team of two at the moment, but for future projects we want to collaborate and work in larger teams, that will most likely work in an asynchronous manner.
+      Stephanie and I started using GitLab's issues to track discussions and document our decision making process and results. We are only a team of two at the moment, but for future projects we want to collaborate and work in larger teams, that will most likely work in an asynchronous manner.
       <ul>
         <li>
           By opening issues and linking/assigning the members that should be involved in the decision making process and/or will be affected by the results, everyone is up to date on the status, can ask questions to clarify points, and contribute to the final results, independently from other team members making time to bring them up to speed.
@@ -123,19 +121,7 @@
 
       Especially helpful when start using a new programming language or framework, and you are still not familiar with all the errors.
     </li>
-
   </ul>
-    <!-- <p>last updated: January 1st, 2020</p> -->
-    <!-- <p>...first of all...</p> -->
-    <!-- <h5>Happy New Year!</h5> -->
-   <!--  <p>
-      Stephanie and I made great progress the last few weeks and getting closer to the final design of the application.
-    </p> -->
-
-
-    <br>
-    <p>...</p>
-    <!-- <p>last updated: November 25th, 2019</p> -->
     <div>
       <h5>Goal</h5>
       <ul>
