--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Casestudy Line</title>
+  <title>Line</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -15,11 +15,11 @@
 
 <body>
   <div class="container">
-    <h2 class="title">Case study Line</h2>
+    <h2 class="title"><a href="https://withline.xyz/" target="_blank"> Line</a></h2>
     <div class="card-case-study">
       <h4>Approach</h4>
       <p>
-        This weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.
+        This ongoing weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.
       </p>
 
       <h4>Motivation</h4>
@@ -36,9 +36,9 @@
         <li>See all open repositories of which you are the owner</li>
         <li>Add a wallet through the web3Modal of WalletConnect</li>
         <li>Create or edit a campaign for each repo or your organization</li>
-        <li>Contribute to a project or organization (in progress)</li>
-        <li>Overview of all contributions to your projects (in progress)</li>
-        <li>Add bounties to projects and smart contracts (in future)</li>
+        <li>WIP: Contribute to a project or organization</li>
+        <li>WIP: Overview of all contributions to your projects</li>
+        <li>WIP: Add bounties to projects and smart contracts</li>
       </ul>
     </div>
 
