--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -16,8 +16,7 @@
 <body>
   <div class="container collapsible">
     <div class="content">
-
-      <h2>Case study ElderMe</h2>
+      <h2 class="title">Case study ElderMe</h2>
       <div class="card-case-study">
         <h3>Goal</h3>
         <p>
@@ -58,14 +57,6 @@
               </ul>
             </div>
           </div>
-
-          <!-- <div>
-            <ul class="trello">
-              <img src="images/elderme_trello_board.png" alt="Screenshot overview Trello project" class="study-pic">
-              <img src="images/elderme_users_0percent.png" alt="detail of trello - card of overview task">
-              <img src="images/elderme_users_33percent.png" alt="detail of trello - card of partially finished task">
-              <img src="images/elderme_users_100percent.png" alt="detail of trello - card of finished task">
-            </ul> -->
           </div>
         </div>
       </div>
@@ -133,7 +124,7 @@
 
    <div>
       <ul class="casestudy-directory">
-        <li><a href="casestudy_flashcards.html" class="link">Previous case study</a></li>
+        <li><a href="casestudy_line.html" class="link">Previous case study</a></li>
         <li><a href="index.html" class="link">Home</a></li>
         <li><a href="casestudy_calculator.html" class="link">Next case study</a></li>
       </ul>
