--- a/casestudy_rreminder.html
+++ b/casestudy_rreminder.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container">
-    <h4 class="mt-4">Case study R Reminder</h4>
+    <h4 class="mt-4 title">Case study R Reminder</h4>
       <h5>Goal</h5>
         Build a reminder app, that enables the user to
         <ul>
@@ -24,9 +24,6 @@
           <li>Create reminders with a title, description and a specific day of the month and time, which will be sent via email monthly</li>
           <li>Delete reminders individually</li>
         </ul>
-        <p>
-          Implement tests
-        </p>
         <h5>Approach</h5>
         <h6>First steps</h6>
           <p>
@@ -107,7 +104,7 @@
     <ul class="casestudy-directory">
       <li><a href="casestudy_flashcards.html" class="link">Previous case study</a></li>
       <li><a href="index.html" class="link">Home</a></li>
-      <li><a href="casestudy_elderme.html" class="link">Next case study</a></li>
+      <li><a href="casestudy_line.html" class="link">Next case study</a></li>
     </ul>
   </div>
 
