--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
       <div class="responsive-container">
         <img class="pic mx-auto d-block" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
         <div class="content">
-          <h2 class="title mb-3">Hi, I am Elisa,  <br>
-          a fullstack software developer based in Berlin.</h2>
+          <h2 class="title mb-3">Hi, I am Elisa, a full-stack software developer based in Bozeman, Montana.</h2>
           <p>
-            In my free time, you can find me solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language on Duolingo - currently Italian.
+            In my free time, you can find me climbing, solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language.
           </p>
           <p>
-            Please feel free to look at my past and current projects.
+            Please feel free to look at my past and current projects and reach out at any time at <span id="email" style="cursor: pointer; color: #125F60; text-decoration: underline;">codersquirrelbln@gmail.com</span>
           </p>
         </div>
       </div>
@@ -32,12 +31,12 @@
         </div>
         <div class="content">
            <p class="mb-3">
-            Line is a platform that aims to facilitate the financial contributionnto open source projects, using web3 technology.
+            <a href="https://github.com/buildwithline/line" target="_blank">Line</a> is a platform that aims to facilitate the financial contribution to open source projects, using web3 technology.
           </p>
           <div class="button-project">
-             <a href="https://github.com/buildwithline/line" target="_blank" class="button">See Code</a>
-            <a href="casestudy_line.html" class="button">Read case study</a>
-             <a href="https://withline.xyz/" target="_blank" class="button">Read more</a>
+            <a href="https://github.com/buildwithline/line" target="_blank">Code</a>
+            <a href="casestudy_line.html">Case study</a>
+            <a href="https://withline.xyz/" target="_blank">Read more</a>
           </div>
         </div>
       </div>
@@ -49,11 +48,11 @@
         </div>
         <div class="content">
            <p class="mb-3">
-            ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a>.
+            <a href="https://github.com/codersquirrelbln/elderme" target="_blank">ElderMe</a> is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" target="_blank">Monther Al Gbawi</a>.
           </p>
           <div class="button-project">
-             <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="button">See Code</a>
-            <a href="casestudy_elderme.html" class="button">Read case study</a>
+             <a href="https://github.com/codersquirrelbln/elderme" target="_blank">Code</a>
+            <a href="casestudy_elderme.html">Case study</a>
           </div>
         </div>
       </div>
@@ -65,13 +64,13 @@
         </div>
         <div class="content">
           <p class="mb-3">
-            The visa calculator enables travellers to calculate one or multiple trips to a country or visa zone such as the Schengen Zone. The user can insert individual visa regulations such as ho many days out if a time frame you may be in the country. It informs the user how many days they can still use up or have to remove to not overstay the visit.
-            This project was built using JavaScript and made use of the flatpickr as a datetime picker in collaboration with front end developer <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a>.
+            <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank">The Visa Calculator</a> enables travellers to calculate one or multiple trips to a country or visa zone such as the Schengen Zone. The user can insert individual visa regulations such as ho many days out if a time frame you may be in the country. It informs the user how many days they can still use up or have to remove to not overstay the visit.
+            This project was built using JavaScript and made use of the flatpickr as a datetime picker in collaboration with front end developer <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a>.
           </p>
           <div class="button-project" >
-            <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank" class="button">See Code</a>
-            <a href="casestudy_calculator.html" class="button">Read case study</a>
-            <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="button">Go to Project</a>
+            <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank">Code</a>
+            <a href="casestudy_calculator.html">Case study</a>
+            <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank">Go to Project</a>
           </div>
         </div>
       </div>
@@ -83,14 +82,13 @@
         </div>
         <div class="content">
           <p class="mb-3">
-            This flashcards app helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
-            This project will be build in Ruby on Rails in collaboration with designer <a href="http://stephaniehawkins.design/" target="_blank" class="link">Stephanie Hawkins</a>.
+            This <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank">Flashcard App</a> helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
+            This project will be build in Ruby on Rails in collaboration with designer <a href="http://stephaniehawkins.design/" target="_blank">Stephanie Hawkins</a>.
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
           <div class="button-project">
-            <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank"  class="button">See Code</a>
-            <a href="casestudy_flashcards.html" class="button">Read case study</a>
-            <!-- <a href="work_in_progress.html" class="button">Go to Project</a> -->
+            <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank">Code</a>
+            <a href="casestudy_flashcards.html">Case study</a>
           </div>
         </div>
       </div>
@@ -102,43 +100,15 @@
         </div>
         <div class="content">
           <p class="mb-3">
-            This web application will help you to never forget anything ever again. You can create an account and create reminders with a specific date and time, and the reminder email will be sent to you on a monthly basis.
+            This <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank"> Reminder App</a> will help you to never forget anything ever again. You can create an account and create reminders with a specific date and time, and the reminder email will be sent to you on a monthly basis.
           </p>
           <div class="button-project">
-            <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank"  class="button">See Code</a>
-            <a href="casestudy_rreminder.html" class="button">Read case study</a>
-            <!-- <a href="work_in_progress.html" class="button">Go to Project</a> -->
+            <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank">Code</a>
+            <a href="casestudy_rreminder.html">Case study</a>
           </div>
         </div>
       </div>
 
-
-      <div class="responsive-container">
-        <div class="content">
-          <h3 class="title">
-            Current Reading List
-          </h3>
-          <ul style="list-style-type:none">
-            <li>
-
-              <p>
-                Starting to read <strong><a href="http://www.blockchain-basics.com/" target="blank" class="link">Blockchain Basics</a></strong> by <em>Daniel Drescher</em> again. Ever since Blockchain@state, a one-day workshop at the State Department in Washington, DC, in 2017, the blockchain technology has fascinated me. I was still a full-time restorer and had nothing to do with programming. Yet the presented case studies showed that Blockchains can be used for more than cryptocurrencies, such as documenting changes in land ownership.
-              </p>
-            </li>
-            <li>
-              <p>
-                Audiobooks are very useful in this busy world, so I am listeing to <em>Brené Brown's</em> The Gifts of Imperfection.
-              </p>
-            </li>
-            <li>
-              <p>
-               Since I am a huge crime novel fan, I am also listening to <strong>The Simple Truth</strong> by <em><a href="https://en.wikipedia.org/wiki/David_Baldacci#Bibliography" target="blank" class="link">David Baldacchi</a></em> as an audiobook. I have become quite a fan of this author and am almost going back to back on his novels. Sometimes I do ‘stray' back to my beloved classics, most prominently to books by <em><a href="https://en.wikipedia.org/wiki/Agatha_Christie" target="blank" class="link">Agatha Christie</a></em>.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
   <footer>
   <div class="contact">
     <ul class="list-inline">
@@ -168,7 +138,19 @@
   </div>
   </footer>
   </body>
-  <script src="javascript/main.js"></script>
+  <script src="javascript/main.js">
+    document.getElementById('email').addEventListener('click', function(event) {
+      let email = document.getElementById('email').innerText;
+      let tempInput = document.createElement('input');
+      document.body.appendChild(tempInput);
+      tempInput.value = email;
+      tempInput.select();
+      document.execCommand('copy');
+      document.body.removeChild(tempInput);
+      
+      alert('Email address copied to clipboard!');
+    });
+  </script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
